fix alignment issue

--- a/src/components/HomePage/Dashboard/DisplayTable/DisplayTable.css
+++ b/src/components/HomePage/Dashboard/DisplayTable/DisplayTable.css
@@ -63,7 +63,7 @@
 /* Tx-Block List */
 
 .display-table #txheight-col {
-  width: 50px;
+  width: 60px;
 }
 
 .display-table #numTxns-col {
